# multimodal-hackathon

./: .env.example  .gitignore  File structure  README.md  main.py  pyproject.toml  requirements.txt  run_agents.py
.gradient/: .gradientignore  agent.yml
agents/: __init__.py  agent.py  competitor_agent.py  news_agent.py  youtube_agent.py
backend/: agent.py  auth.py  daily_report.py  discovery.py  llm.py  main.py  memory.py  scheduler.py  seed_data.py  synthesizer.py
backend/routers/: agent.py  chat.py  discover.py  report.py  signals.py
backend/signals/: employee_signals.py  investor_signals.py  urgency_scorer.py
backend/tools/: exa_tools.py  youtube_tools.py
backend/workers/: github_watcher.py  image_analyzer.py  jobs_watcher.py  news_watcher.py  web_scraper.py  youtube_watcher.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/lib/: api.ts  types.ts
frontend/src/routes/: competitor.$name.tsx  dashboard.tsx  index.tsx
tools/: example_tool.py
