[project]
name = "multimodal-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "gradient-adk",
    "langchain-openai",
    "langgraph",
    "fastapi[standard]",
    "uvicorn[standard]",
    "dotenv>=0.9.9",
]
