[project]
name = "multimodal-hackathon"
version = "0.1.0"
description = "ScoutAgent — autonomous competitive intelligence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradient-adk",
    "langchain-openai",
    "langgraph",
    "fastapi[standard]",
    "uvicorn[standard]",
    "httpx",
    "feedparser",
    "beautifulsoup4",
    "lxml",
    "google-generativeai",
    "python-dateutil",
    "dotenv>=0.9.9",
    "exa-py",
    "yt-dlp",
]
